  * technorati.gemspec: more verbose requirements
  * technorati.gemspec: added examples/referrer_rss.rb to RDoc list
  * MANIFEST: updated

* Wed Sep 29 10:12:25 2004, pabs <pabs@pablotron.org>
  * technorati.gemspec: fix one little gotcha
  * releasing 0.1.0

* Wed Feb 22 14:05:56 2006, pabs <pabs@pablotron.org>
  * technorati.rb: fix bug in bloginfo reported by Mario Lopes

* Wed Feb 22 14:07:52 2006, pabs <pabs@pablotron.org>
  * technorati.rb: update version to 0.1.1
  * technorati.gemspec: ditto
  * README: ditto

* Tue Dec  5 03:18:24 EST 2006, Paul Duncan <pabs@pablotron.org>
  * technorati.rb: update copyright
  * technorati.rb: remove string monkey patches
  * technorati.rb: use CGI.escape instead of custom method
  * technorati.rb: update version to 0.2.0
  * technorati.rb: wrap exceptions in Technorati::Error exception
  * technorati.rb: fix wording (exerpt => excerpt, based on patch from
    Cooper Bethea)
  * technorati.rb: clean up documentation for Technorati.new
  * technorati.rb: add optional options hash as parameter to
    Technorati.new
  * technorati.rb: add proxy support (Technorati#find_http_proxy; ripped
    straight from Rubilicious)
  * technorati.rb: add support for HTTP proxies (checks for
    opt['proxy_url'], then either the windows registry or the following
    environment variables: TECHNORATI_HTTP_PROXY, HTTP_PROXY, http_proxy
  * technorati.rb: added tweakable API url (via opt['api_url']).
    defaults to api.technorati.com

* Tue Dec 12 02:22:07 EST 2006, Paul Duncan <pabs@pablotron.org>
  * technorati.gemspec: updated homepage
  * technorati.rb: updated documentation
  * technorati.rb: removed Technorati#outbound
  * technorati.rb: added Technorati#tag
  * technorati.rb: added Technorati#key_info
  * technorati.rb: added Technorati#top_tags
  * technorati.rb: added Technorati#blog_post_tags

* Thu Dec 14 01:14:04 2006, pabs <pabs@pablotron.org>
  * added Rakefile
  * technorati.gemspec: added Gem::Package::RUBY